lab1/Test/L1-A-12-8.output
Error Type A at Line 1
Error Type B at Line 4
Error Type B at Line 9
Error Type B at Line 10
Error Type B at Line 24
Error Type B at Line 36
Error Type A at Line 43
