lab1/Test/L1-A-12-8.cmm
struct A6EmWckcI :J02P 
;
float ;
int ( int DEb6cf [ 2145486827 ] ) {
}
int Phg6HfAJE1RwO ( ) {
  ce9 ;
  if ( QVsUJ )   abGQBWJhG6LCB ;
else   if ( BRIhtlZScqa   if ( SqIHtKkI7C )   while 
    laEQtw4l36iypRPBL3 )   W1OO6a9qj70S8BEB9Z5w ;

else   return pMjk ;



  if ( ovbRuhb ) {
  }else   if ( bmu3St )   MqPFK9RFTgvup ;


}
int Xytic , TDX2L 


struct {
  struct fA6cB {
    int YiDlXWPYqzBKZo ;
  }cOkQXObTHaP ;
  int FKAK5O_ , AJMv7HHgDPLs9Yu = BJQmor5y5Sg3pFXJx 
    && WRo0JX >= fuN8f3k - T0Rz9JkQZ6c7pQS [ SudIKjA8eNojjg7pp4 
    = sER6HpW || JDtyuMaIqwUa == SMTc2aWfDFBc ( l9 , LHHmWS 
    < FbxJHJvxV_h5gNkpwD8a - ! ! ( fbKeXfdB2xDPUr1 || 
    x > qcf + S7H4ShdlVz5bs0R ( q45S05K6FTLyu1hvqdD || 
    DrGU_af <= ! AaZdWk [ Vz6Y6_2dCf + ( ErnGSRff2znc9suL73B 
    || o8OyPXRr2jEOQ5Hr != fIRh ) . d + - LHSxbsq6CJe 
    . fM54kvk7tSFvF7Vjp + Fzw3cfQC ] ) ) + ! - - 717911281 
    ) . Q4 ] * ! 525134161.1448778308 / - DDpLUq ( ;
};
int ;
int ;
int cEQHxQkvFxoNYiK9Eb8Z ( int fia66a2SfAPk , int 
  lolZiNAcC8f1ZdCK ) {
}
$